# NLP_with_LLMs

./: .gitignore  README.md  demo.ipynb  generate_data.py  gpt4all.ipynb  gpu_utilities.py  inference.ipynb  load_model.py  make_preds.py  output.txt  pyproject.toml  requirements.txt  single_gpu.ipynb  train.py
